@@ -134,7 +134,7 @@
             id=menu-main
             title= _ "Menu"
             image=lite
-            items=objectives,statistics,unitlist,separator,statustable,save,savemap,load,preferences,chatlog,AUTOSAVES,help,quit
+            items=objectives,statistics,unitlist,separator,statustable,save,savereplay,savemap,load,preferences,chatlog,AUTOSAVES,help,quit
             ref=top-panel
             rect="=+3,=+1,+100,=-4"
             xanchor=fixed
