@@ -56,6 +56,7 @@ public:
 	virtual void unit_list();
 	virtual void status_table();
 	virtual void save_game();
+	virtual void save_replay();
 	virtual void save_map();
 	virtual void load_game();
 	virtual void preferences();
