@@ -30,6 +30,7 @@ Version 1.3.13+svn:
  * user interface
    * the apple key works as shortcut modifier again (bug #10586)
    * made "Show lobby joins of friends only" the default preference
+   * new menu option added to save replays manually
  * WML engine:
    * new tag [filter_vision] for Standard Unit Filter
    * it is now possible to play [sound] repeatedly using a "repeat" attribute
